--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,9 +9,15 @@ ja:
       entries: エントリー
     attributes:
       lottery: 
+        prizes: 賞品
         name_field_enabled: 名前を必要とするか
         note_field_enabled: 備考を必要とするか
         deadline: 締切日
+      lottery/prizes:
+        name: 賞品名
+        winners_count: 当選者数
+        winning_email_subject: 当選メールの件名
+        winning_email_body: 当選メールの本文
       prize:
         name: 賞品名
         winners_count: 当選者数
