--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -18,7 +18,7 @@ ja:
         password: パスワード
         password_confirmation: パスワード（確認用）
         remember_created_at: ログイン記憶時刻
-        remember_me: 次回から自動でログインする
+        remember_me: ログインを記憶する
         reset_password_sent_at: パスワードリセット送信時刻
         reset_password_token: パスワードリセット用トークン
         sign_in_count: ログイン回数
@@ -48,36 +48,33 @@ ja:
       confirmation_instructions:
         action: メールアドレスの確認
         greeting: "%{recipient}様"
-        instruction: 以下のリンクをクリックし、メールアドレスの確認手続を完了させてください。
-        subject: [SmartLottery]メールアドレス確認メール
-        confirm_email: メールアドレスを確認
+        instruction: SmartLotteryにご登録いただきありがとうございます。以下のリンクをクリックし、メールアドレスの確認手続を完了させてください。
+        subject: '[SmartLottery]メールアドレス確認メール'
+        confirm_my_account: メールアドレス確認
       email_changed:
-        greeting: こんにちは、%{recipient}様。
-        message: メールアドレスの（%{email}）変更が完了したため、メールを送信しています。
-        message_unconfirmed: メールアドレスが（%{email}）変更されたため、メールを送信しています。
-        subject: [SmartLottery]メール変更完了
+        greeting: "%{recipient}様"
+        message: メールアドレス（%{email}）の変更が完了したため、メールを送信しています。
+        message_unconfirmed: メールアドレス（%{email}）が変更されたため、メールを送信しています。
+        subject: '[SmartLottery]メール変更完了'
       password_change:
         greeting: "%{recipient}様"
         message: パスワードが再設定されました。
-        subject: [SmartLottery]パスワードの変更について
+        subject: '[SmartLottery]パスワードの変更について'
       reset_password_instructions:
         action: パスワード変更
+        change_my_password: パスワードを変更する
         greeting: "%{recipient}様"
         instruction: パスワード再設定の依頼を受けたため、メールを送信しています。下のリンクからパスワードの再設定ができます。
         instruction_2: パスワード再設定の依頼をしていない場合、このメールを無視してください。
         instruction_3: パスワードの再設定は、上のリンクから新しいパスワードを登録するまで完了しません。
-        subject: [SmartLottery]パスワードの再設定について
-        change_my_password: パスワード変更
+        subject: '[SmartLottery]パスワードの再設定について'
       unlock_instructions:
         action: アカウントのロック解除
         greeting: "%{recipient}様"
         instruction: アカウントのロックを解除するには下のリンクをクリックしてください。
         message: ログイン失敗が繰り返されたため、アカウントはロックされています。
-        subject: [SmartLottery]アカウントのロック解除について
-        unlock_account: アカウントのロック解除
-    omniauth_callbacks:
-      failure: "%{kind} アカウントによる認証に失敗しました。理由：（%{reason}）"
-      success: "%{kind} アカウントによる認証に成功しました。"
+        subject: '[SmartLottery]アカウントのロック解除について'
+        unlock_my_account: アカウントのロック解除
     passwords:
       edit:
         change_my_password: パスワードを変更する
@@ -87,19 +84,21 @@ ja:
       new:
         forgot_your_password: パスワードを忘れましたか？
         send_me_reset_password_instructions: パスワードの再設定方法を送信する
+        validates: "アルファベット大文字・小文字・数字を含めて%{count}文字以上"
       no_token: このページにはアクセスできません。パスワード再設定メールのリンクからアクセスされた場合には、URL をご確認ください。
       send_instructions: パスワードの再設定について数分以内にメールでご連絡いたします。
       send_paranoid_instructions: メールアドレスが登録済みの場合、パスワード再設定用のメールが数分以内に送信されます。
       updated: パスワードが正しく変更されました。
       updated_not_active: パスワードが正しく変更されました。
     registrations:
-      destroyed: アカウントを削除しました。またのご利用をお待ちしております。
+      destroyed: アカウントを削除しました。
       edit:
-        are_you_sure: 本当によろしいですか？
+        all_logs_will_be_deleted: 記録はすべて削除されます。
+        are_you_sure: 本当に削除してよろしいですか？
         cancel_my_account: アカウント削除
         currently_waiting_confirmation_for_email: "%{email} の確認待ち"
         leave_blank_if_you_don_t_want_to_change_it: 空欄のままなら変更しません
-        title: "%{resource}編集"
+        title: "登録情報編集"
         unhappy: 気に入りません
         update: 更新
         we_need_your_current_password_to_confirm_your_changes: 変更を反映するには現在のパスワードを入力してください
@@ -109,6 +108,7 @@ ja:
       signed_up_but_inactive: ログインするためには、アカウントを有効化してください。
       signed_up_but_locked: アカウントがロックされているためログインできません。
       signed_up_but_unconfirmed: 本人確認用のメールを送信しました。メール内のリンクからアカウントを有効化させてください。
+      update: 更新
       update_needs_confirmation: アカウント情報を変更しました。変更されたメールアドレスの本人確認のため、本人確認用メールより確認処理をおこなってください。
       updated: アカウント情報を変更しました。
       updated_but_not_signed_in: あなたのアカウントは正常に更新されましたが、パスワードが変更されたため、再度ログインしてください。
@@ -121,12 +121,13 @@ ja:
     shared:
       links:
         back: 戻る
-        didn_t_receive_confirmation_instructions: アカウント確認のメールを受け取っていませんか？
-        didn_t_receive_unlock_instructions: アカウントのロック解除方法のメールを受け取っていませんか？
-        forgot_your_password: パスワードを忘れましたか？
+        didn_t_receive_confirmation_instructions: アカウント確認のメールが届いていない
+        didn_t_receive_unlock_instructions: アカウントのロック解除方法のメールが届いていない
+        forgot_your_password: パスワードを忘れた
         sign_in: ログイン
         sign_in_with_provider: "%{provider}でログイン"
-        sign_up: アカウント登録
+        sign_up: 利用登録
+        when_you_cant_log_in: ログインできない時は
       minimum_password_length: "（%{count}字以上）"
     unlocks:
       new:
@@ -137,6 +138,7 @@ ja:
   errors:
     messages:
       already_confirmed: は既に登録済みです。ログインしてください。
+      complexity_requirement_not_met: はアルファベット大文字・小文字・数字を各1文字以上使用してください。
       confirmation_period_expired: の期限が切れました。%{period} までに確認する必要があります。 新しくリクエストしてください。
       expired: の有効期限が切れました。新しくリクエストしてください。
       not_found: は見つかりませんでした。
