説明フォームを作成

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,6 +14,7 @@ ja:
         note_field_enabled: 備考を必要とするか
         deadline: 締切日
         name: 抽選会名
+        description: 説明文
       lottery/prizes:
         name: 賞品名
         winners_count: 当選者数
